# SPINTRONIC

./: .gitignore  ANALYSIS_SUMMARY.md  BUILD_COMPLETE.md  BUILD_COMPLETION_SUMMARY.md  BUILD_FIX_SUMMARY.md  BUILD_STATUS.md  CMakeLists.txt  CMakeLists.txt.txt  CMakeLists_complete.txt.txt  COMPLETION_REPORT.md  COMPLETION_SUMMARY.txt  Combined.txt  Dockerfile  Dockerfile.gpu  Dockerfile.phase5-7  ERROR_CHECK_REPORT.md  ERROR_FIX_SUMMARY.md  FINAL_REPORT.md  IMPROVEMENTS_SUMMARY.md  LICENSE.file  OPERATIONAL_STATUS.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE_5_7_COMPLETION_REPORT.md  PROJECT_STATUS.md  PROJECT_SUMMARY.txt  PR_CREATION_SUMMARY.md  PULL_REQUEST_INSTRUCTIONS.md  QUICK_START.md  README.md  SECURITY_AUDIT.md  START_HERE.md  UPGRADE_PLAN.md  advanced_fitting.cpp.cpp  advanced_fitting.h.h  analyze_conductors.cpp  analyze_semiconductors.cpp  build.sh.sh  ci-cd.yml.yml  cuda_kernels.cu.cu  (+24 more)
.github/.github/workflows/: phase5-7-ci.yml
.github/actions/install-eigen3/: action.yml
.github/workflows/: phase5-7-ci.yml
benchmarks/: benchmark_main.cpp
cmake/: pseudomode-config.cmake.in
docs/: Doxyfile  Doxyfile.in  README.md  REFACTORING_RECOMMENDATIONS.md  materials_3d.schema.json
examples/: tutorial_advanced_features.ipynb  tutorial_basic_usage.ipynb
include/: lbfgs_optimizer.h  pseudomode_solver.h  pseudomode_solver_complete.h
k8s/: deployment.yaml  gpu-deployment.yaml  ingress.yaml  persistent-storage.yaml
notebooks/: Tutorial_1_Materials_Database.ipynb
src/: advanced_fitting.cpp  cuda_kernels.cu  framework_complete.cpp  high_level_interface.cpp  lindblad_evolution.cpp  lindblad_solver_complete.cpp  materials_database.cpp  prony_fitting.cpp  python_bindings.cpp  quantum_state.cpp  spectral_density_2d.cpp  utils.cpp
tests/: integration_tests.cpp  performance_benchmark.cpp  test_cuda_validation.cpp  test_materials_database.cpp  test_prony_fitting.cpp  test_quantum_state.cpp  test_spectral_density.cpp  test_suite.cpp
